--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,15 +13,15 @@ concurrency:
 
 jobs:
   linux:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container: mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-18.04-cross-arm64-staging # https://github.com/dotnet/versions/blob/main/build-info/docker/image-info.dotnet-dotnet-buildtools-prereqs-docker-main.json
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup .NET
-        uses: actions/setup-dotnet@v2
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '7.0.x'
       - name: Publish
         run: |
           dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -o ./generic
@@ -30,10 +30,8 @@ jobs:
           dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r linux-arm64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-arm64
       - name: Publish with NativeAOT
         run: |
-          dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 7.0.0-*
-          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-x64 --sc -p:CppCompilerAndLinker=clang-9 -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-x64
-          dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.linux-x64.Microsoft.DotNet.ILCompiler -v 7.0.0-*
-          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 --sc -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-arm64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-x64 -p:CppCompilerAndLinker=clang-9 -o ./cli-x64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -o ./cli-arm64
       - name: Extract tag name
         id: tag
         if: startsWith(github.ref, 'refs/tags/')
@@ -73,16 +71,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'
       - name: Publish
         run: |
           dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r win-x64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-x64
           dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r win-arm64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=copyused -o ./gui-arm64
       - name: Publish with NativeAOT
         run: |
-          dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package Microsoft.DotNet.ILCompiler -v 7.0.0-*
-          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-x64 --sc -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-x64
-          dotnet add MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj package runtime.win-x64.Microsoft.DotNet.ILCompiler -v 7.0.0-*
-          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-arm64 --sc -p:IlcInvariantGlobalization=true -p:IlcGenerateStackTraceData=false -p:IlcTrimMetadata=true -o ./cli-arm64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-x64 -o ./cli-x64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r win-arm64 -o ./cli-arm64
       - name: Extract tag name
         id: tag
         if: startsWith(github.ref, 'refs/tags/')
