--- a/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
+++ b/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.*" Condition=" '$(Configuration)' == 'Debug' " />
     <PackageReference Include="ByteSize" Version="2.1.*" />
     <PackageReference Include="FluentAvaloniaUI" Version="1.4.*" />
-    <PackageReference Include="FluentIcons.Avalonia" Version="1.1.*" />
+    <PackageReference Include="FluentIcons.FluentAvalonia" Version="1.1.*" />
   </ItemGroup>
 
   <ItemGroup>
