--- a/MusicDecrypto.Commandline/Properties/launchSettings.json
+++ b/MusicDecrypto.Commandline/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MusicDecrypto.Commandline": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\Downloads\\Music -f"
+      "commandLineArgs": "C:\\Users\\nalch\\Downloads -f"
     }
   }
 }
