--- a/MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj
+++ b/MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DebugType>None</DebugType>
     <PublishAot>true</PublishAot>
-    <StripSymbols>true</StripSymbols>
+    <!-- <StripSymbols>true</StripSymbols> -->
     <InvariantGlobalization>true</InvariantGlobalization>
     <IlcOptimizationPreference>Speed</IlcOptimizationPreference>
   </PropertyGroup>
