--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
     container: mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-20.04-cross-arm64 # https://github.com/dotnet/versions/blob/main/build-info/docker/image-info.dotnet-dotnet-buildtools-prereqs-docker-main.json
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -31,7 +31,7 @@ jobs:
       - name: Publish CLI
         run: |
           dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-x64 -p:CppCompilerAndLinker=clang-9 -o ./cli-x64
-          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -o ./cli-arm64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r linux-arm64 -p:CppCompilerAndLinker=clang-9 -p:SysRoot=/crossrootfs/arm64 -p:StripSymbols=false -o ./cli-arm64
       - name: Extract tag name
         id: tag
         if: startsWith(github.ref, 'refs/tags/')
@@ -41,7 +41,6 @@ jobs:
         run: |
           tar cavf musicdecrypto-all-$GIT_TAG_NAME-net7.0-noarch.tar.xz -C ./generic/ $(cd ./generic/ && echo *)
           sha256sum musicdecrypto-all-$GIT_TAG_NAME-net7.0-noarch.tar.xz > musicdecrypto-all-$GIT_TAG_NAME-net7.0-noarch.tar.xz.sha256
-          strip ./cli-x64/musicdecrypto
           aarch64-linux-gnu-strip ./cli-arm64/musicdecrypto
           tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-x64.tar.xz -C ./gui-x64/ $(cd ./gui-x64/ && echo *)
           tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-arm64.tar.xz -C ./gui-arm64/ $(cd ./gui-arm64/ && echo *)
@@ -56,8 +55,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            musicdecrypto-all-${{ steps.tag.outputs.tag }}-net7.0-noarch.tar.xz
-            musicdecrypto-all-${{ steps.tag.outputs.tag }}-net7.0-noarch.tar.xz.sha256
+            musicdecrypto-all-${{ steps.tag.outputs.tag }}-net8.0-noarch.tar.xz
+            musicdecrypto-all-${{ steps.tag.outputs.tag }}-net8.0-noarch.tar.xz.sha256
             musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz
             musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz.sha256
             musicdecrypto-gui-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz
@@ -66,11 +65,56 @@ jobs:
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz.sha256
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz.sha256
+  macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
+      - name: Publish Avalonia
+        run: |
+          dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r osx-x64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=partial -o ./gui-x64
+          dotnet publish MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj -c Release -r osx-arm64 --sc -p:PublishSingleFile=true -p:PublishTrimmed=true -p:TrimMode=partial -o ./gui-arm64
+      - name: Publish CLI
+        run: |
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r osx-x64 -o ./cli-x64
+          dotnet publish MusicDecrypto.Commandline/MusicDecrypto.Commandline.csproj -c Release -r osx-arm64 -o ./cli-arm64
+      - name: Extract tag name
+        id: tag
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: olegtarasov/get-tag@v2.1.2
+      - name: Pack
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          tar cavf musicdecrypto-gui-$GIT_TAG_NAME-osx-x64.tar.xz -C ./gui-x64/ $(cd ./gui-x64/ && echo *)
+          tar cavf musicdecrypto-gui-$GIT_TAG_NAME-osx-arm64.tar.xz -C ./gui-arm64/ $(cd ./gui-arm64/ && echo *)
+          tar cavf musicdecrypto-cli-$GIT_TAG_NAME-osx-x64.tar.xz -C ./cli-x64/ musicdecrypto
+          tar cavf musicdecrypto-cli-$GIT_TAG_NAME-osx-arm64.tar.xz -C ./cli-arm64/ musicdecrypto
+          shasum -a 256 musicdecrypto-gui-$GIT_TAG_NAME-osx-x64.tar.xz > musicdecrypto-gui-$GIT_TAG_NAME-osx-x64.tar.xz.sha256
+          shasum -a 256 musicdecrypto-gui-$GIT_TAG_NAME-osx-arm64.tar.xz > musicdecrypto-gui-$GIT_TAG_NAME-osx-arm64.tar.xz.sha256
+          shasum -a 256 musicdecrypto-cli-$GIT_TAG_NAME-osx-x64.tar.xz > musicdecrypto-cli-$GIT_TAG_NAME-osx-x64.tar.xz.sha256
+          shasum -a 256 musicdecrypto-cli-$GIT_TAG_NAME-osx-arm64.tar.xz > musicdecrypto-cli-$GIT_TAG_NAME-osx-arm64.tar.xz.sha256
+      - name: GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            musicdecrypto-gui-${{ steps.tag.outputs.tag }}-osx-x64.tar.xz
+            musicdecrypto-gui-${{ steps.tag.outputs.tag }}-osx-x64.tar.xz.sha256
+            musicdecrypto-gui-${{ steps.tag.outputs.tag }}-osx-arm64.tar.xz
+            musicdecrypto-gui-${{ steps.tag.outputs.tag }}-osx-arm64.tar.xz.sha256
+            musicdecrypto-cli-${{ steps.tag.outputs.tag }}-osx-x64.tar.xz
+            musicdecrypto-cli-${{ steps.tag.outputs.tag }}-osx-x64.tar.xz.sha256
+            musicdecrypto-cli-${{ steps.tag.outputs.tag }}-osx-arm64.tar.xz
+            musicdecrypto-cli-${{ steps.tag.outputs.tag }}-osx-arm64.tar.xz.sha256
   win:
     runs-on: windows-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Publish library
         if: startsWith(github.ref, 'refs/tags/')
         run: dotnet pack MusicDecrypto.Library/MusicDecrypto.Library.csproj -c Release -o .
