--- a/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
+++ b/MusicDecrypto.Avalonia/MusicDecrypto.Avalonia.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>musicdecrypto-avalonia</AssemblyName>
     <OutputType>WinExe</OutputType>
-    <VersionPrefix>2.3.0</VersionPrefix>
-    <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
 
@@ -19,7 +16,7 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="11.0.*" Condition=" '$(Configuration)' == 'Debug' " />
     <PackageReference Include="ByteSize" Version="2.1.*" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.0.*" />
-    <PackageReference Include="FluentIcons.FluentAvalonia" Version="1.1.*" />
+    <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.*" />
   </ItemGroup>
 
   <ItemGroup>
