--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           tar cavf musicdecrypto-all-$GIT_TAG_NAME-net8.0-noarch.tar.xz -C ./generic/ $(cd ./generic/ && echo *)
-          sha256sum musicdecrypto-all-$GIT_TAG_NAME-net8.0-noarch.tar.xz > musicdecrypto-all-$GIT_TAG_NAME-net7.0-noarch.tar.xz.sha256
+          sha256sum musicdecrypto-all-$GIT_TAG_NAME-net8.0-noarch.tar.xz > musicdecrypto-all-$GIT_TAG_NAME-net8.0-noarch.tar.xz.sha256
           aarch64-linux-gnu-strip ./cli-arm64/musicdecrypto
           tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-x64.tar.xz -C ./gui-x64/ $(cd ./gui-x64/ && echo *)
           tar cavf musicdecrypto-gui-$GIT_TAG_NAME-linux-arm64.tar.xz -C ./gui-arm64/ $(cd ./gui-arm64/ && echo *)
@@ -65,7 +65,7 @@ jobs:
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-x64.tar.xz.sha256
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz
             musicdecrypto-cli-${{ steps.tag.outputs.tag }}-linux-arm64.tar.xz.sha256
-  macos:
+  osx:
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -155,8 +155,9 @@ jobs:
             - `noarch` variant depends on [.NET Runtime](https://dotnet.microsoft.com/en-us/download);
             - `x64` variant of CLI was built targeting `x86-64-v3` (AVX2).
   nuget:
-    runs-on: windows-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+    needs: [linux, osx, win]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
